[gd_scene load_steps=11 format=3 uid="uid://cxbss06cw0s5"]

[ext_resource type="Script" uid="uid://bus2x3i4tucki" path="res://main.gd" id="1_h2yge"]
[ext_resource type="PackedScene" uid="uid://dhuqgth8nvvlc" path="res://player.tscn" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://duriaicwadra2" path="res://mob.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://80ewgpyvif7b" path="res://hud.tscn" id="4_1bvp3"]
[ext_resource type="Shader" uid="uid://6jh7ww15ti4" path="res://water.gdshader" id="4_7mycd"]
[ext_resource type="AudioStream" uid="uid://c5qpnfga41t4p" path="res://art/House In a Forest Loop.ogg" id="5_lquwl"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7dm0k"]
size = Vector3(60, 2, 60)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_272bh"]
render_priority = 0
shader = ExtResource("4_7mycd")
shader_parameter/shallow_color = Color(0.1, 0.5, 0.7, 1)
shader_parameter/deep_color = Color(0.02, 0.2, 0.35, 1)
shader_parameter/color_height_mix = 0.3
shader_parameter/wave_amp = 0.3
shader_parameter/wave_len = 0.276
shader_parameter/wave_speed = 1.2
shader_parameter/roughness = 0.0
shader_parameter/specular = 0.6

[sub_resource type="PlaneMesh" id="PlaneMesh_5vw27"]
material = SubResource("ShaderMaterial_272bh")
size = Vector2(60, 60)

[sub_resource type="Curve3D" id="Curve3D_lquwl"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -15.4045, 0, -23.7006, 0, 0, 0, 0, 0, 0, 15.4802, 0, -23.4745, 0, 0, 0, 0, 0, 0, 15.4791, 0, 16.448, 0, 0, 0, 0, 0, 0, -16.0663, 0, 16.2274),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="Main" type="Node"]
script = ExtResource("1_h2yge")
mob_scene = ExtResource("2_h2yge")
player_scene = ExtResource("1_ig7tw")

[node name="Water" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Water"]
visible = false
shape = SubResource("BoxShape3D_7dm0k")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Water"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
mesh = SubResource("PlaneMesh_5vw27")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 100, 0)
shadow_enabled = true

[node name="PlayerStartPosition" type="Marker3D" parent="."]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 19, 19)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
projection = 1
size = 19.0

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_lquwl")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-0.00732049, 0, -0.999972, 0, 1, 0, 0.999972, 0, -0.00732049, -15.4045, 0, -23.7006)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
visible = false
stream = ExtResource("5_lquwl")
autoplay = true

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
